--- a/Python/Assignments/Assignment-2-Kyaw-Zin-Htet.ipynb
+++ b/Python/Assignments/Assignment-2-Kyaw-Zin-Htet.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "bec0dc4a",
    "metadata": {},
    "outputs": [
@@ -61,120 +61,50 @@
     "\n",
     "n = int(input(\"Enter the number of rows for the game board: \"))\n",
     "m = int(input(\"Enter the number of columns for the game board: \"))\n",
-    "t_row = int(input(\"Choose a row to hide the treasure (1-{n}): \".format(n=n)))\n",
-    "t_col = int(input(\"Choose a column to hide the treasure (1-{m}): \".format(m=m)))\n",
-    "\n",
-    "print(\"Here's your game board:\\n\")\n",
-    "\n",
     "board = [[\"*\" for _ in range(m)] for _ in range(n)]\n",
-    "board[t_row-1][t_col-1] = 'T'\n",
+    "\n",
+    "while True:\n",
+    "  t_row = int(input(\"Choose a row to hide the treasure (1-{n}): \".format(n=n)))\n",
+    "  t_col = int(input(\"Choose a column to hide the treasure (1-{m}): \".format(m=m)))\n",
+    "\n",
+    "  if 1 <= t_row <= n and 1 <= t_col <=m:\n",
+    "    t_row-=1\n",
+    "    t_col-=1\n",
+    "    break\n",
+    "  else:\n",
+    "    print(\"Invalid Location! Please Try Again!\")\n",
+    "\n",
+    "print(\"\\nHere's your game board:\\n\")\n",
+    "\n",
+    "board[t_row][t_col] = 'T'\n",
     "\n",
     "for row in board:\n",
     "    print(\" \".join(row))\n",
-    "# for i in range(1, n+1):\n",
-    "#   for j in range(1, m+1):\n",
-    "#     if j == t_col and i == t_row:\n",
-    "#       print('T', end=' ')\n",
-    "#       pass\n",
-    "#     elif(j < m):\n",
-    "#       print('*', end=' ') \n",
-    "#     else:\n",
-    "#       print('*\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "8d65806b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== Treasure Hunt Game ===\n",
-      "\n",
-      "Here’s your board:\n",
-      "* * * * *\n",
-      "* * * * *\n",
-      "* * * * *\n",
-      "* * * * *\n",
-      "* * * * *\n",
-      "❌ Not here. Try again!\n",
-      "\n",
-      "The final board (T = Treasure, X = Trap):\n",
-      "* T * * *\n",
-      "* * * * *\n",
-      "* * * * *\n",
-      "* * * * *\n",
-      "* * * * X\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
     "\n",
-    "print(\"=== Treasure Hunt Game ===\")\n",
-    "\n",
-    "# Ask board size\n",
-    "n = int(input(\"Enter number of rows: \"))\n",
-    "m = int(input(\"Enter number of columns: \"))\n",
-    "\n",
-    "# Create board filled with '*'\n",
-    "board = [[\"*\" for _ in range(m)] for _ in range(n)]\n",
-    "\n",
-    "# Player chooses treasure location\n",
     "while True:\n",
-    "    treasure_row = int(input(f\"Choose treasure row (1 to {n}): \"))\n",
-    "    treasure_col = int(input(f\"Choose treasure column (1 to {m}): \"))\n",
-    "    \n",
-    "    if 1 <= treasure_row <= n and 1 <= treasure_col <= m:\n",
-    "        treasure_row -= 1   # convert to 0-based index\n",
-    "        treasure_col -= 1\n",
-    "        break\n",
-    "    else:\n",
-    "        print(\"❌ Invalid location. Try again.\")\n",
+    "  trap_row = random.randint(0, n-1)\n",
+    "  trap_col = random.randint(0, m-1)\n",
+    "  if (trap_row, trap_col) != (t_row, t_col):\n",
+    "    break\n",
     "\n",
-    "# Random trap placement\n",
-    "while True:\n",
-    "    trap_row = random.randint(0, n-1)\n",
-    "    trap_col = random.randint(0, m-1)\n",
-    "    if (trap_row, trap_col) != (treasure_row, treasure_col):\n",
-    "        break\n",
+    "guess_row = int(input(\"Guess the row of the treasure (1-{n}): \".format(n=n))) - 1\n",
+    "guess_col = int(input(\"Guess the column of the treasure (1-{m}): \".format(m=m))) - 1\n",
     "\n",
-    "# Show empty board first\n",
-    "print(\"\\nHere’s your board:\")\n",
-    "for row in board:\n",
-    "    print(\" \".join(row))\n",
-    "\n",
-    "# Player makes a guess\n",
-    "guess_row = int(input(f\"\\nGuess treasure row (1 to {n}): \")) - 1\n",
-    "guess_col = int(input(f\"Guess treasure column (1 to {m}): \")) - 1\n",
-    "\n",
-    "# Check guess\n",
-    "if (guess_row, guess_col) == (treasure_row, treasure_col):\n",
-    "    print(\"🎉 Congratulations! You found the treasure!\")\n",
-    "elif (guess_row, guess_col) == (trap_row, trap_col):\n",
-    "    print(\"💀 Oh no! You fell into a trap!\")\n",
+    "if (guess_row, guess_col) == (t_row, t_col):\n",
+    "  print(\"Congratulations! You found the treasure!\")\n",
+    "elif(trap_row == guess_row and trap_col == guess_col):\n",
+    "  print(\"Oh no! You fell into a trap!\")\n",
     "else:\n",
-    "    print(\"❌ Not here. Try again!\")\n",
+    "  print(\"Not here. Try again.\")\n",
     "\n",
-    "# Reveal the board with T and X\n",
-    "board[treasure_row][treasure_col] = \"T\"\n",
-    "board[trap_row][trap_col] = \"X\"\n",
+    "board[t_row][t_col] = 'T'\n",
+    "board[trap_row][trap_col] = 'X'\n",
     "\n",
-    "print(\"\\nThe final board (T = Treasure, X = Trap):\")\n",
     "for row in board:\n",
-    "    print(\" \".join(row))\n"
+    "  print(\" \".join(row))\n",
+    "\n",
+    "print(\"The final board (T = Treasure, X = Trap)\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "770ea755",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
