--- a/Python/Assignments/Assignment-3-Kyaw-Zin-Htet.ipynb
+++ b/Python/Assignments/Assignment-3-Kyaw-Zin-Htet.ipynb
@@ -55,6 +55,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "72b422ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_bmi(weight, height):\n",
+    "    bmi = weight / (height ** 2)\n",
+    "    print(f\"\\nYour BMI is: {round(bmi, 2)}\")\n",
+    "    if bmi < 18.5:\n",
+    "        print(\"Health Assessment: Underweight\")\n",
+    "    elif 18.5 <= bmi <= 24.9:\n",
+    "        print(\"Health Assessment: Normal weight\")\n",
+    "    elif 25 <= bmi <= 29.9:\n",
+    "        print(\"Health Assessment: Overweight\")\n",
+    "    else:\n",
+    "        print(\"Health Assessment: Obesity\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "06a0d55a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Your BMI is: 22.22\n",
+      "Health Assessment: Normal weight\n"
+     ]
+    }
+   ],
+   "source": [
+    "unit_system = input(\"Do you want to use Metric (kg/m) or Imperial (lbs/in)? Enter M or I: \").strip().upper()\n",
+    "\n",
+    "if unit_system == \"M\":\n",
+    "    weight = float(input(\"Enter your weight in kilograms: \"))\n",
+    "    height = float(input(\"Enter your height in meters: \"))\n",
+    "elif unit_system == \"I\":\n",
+    "    weight_lbs = float(input(\"Enter your weight in pounds: \"))\n",
+    "    height_in = float(input(\"Enter your height in inches: \"))\n",
+    "    \n",
+    "    weight = weight_lbs / 2.20462   # pounds to kilograms\n",
+    "    height = height_in / 39.3701    # inches to meters\n",
+    "else:\n",
+    "    print(\"Invalid choice. Please run the program again.\")\n",
+    "    exit()\n",
+    "\n",
+    "calculate_bmi(weight, height)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d1c9590e",
    "metadata": {},
@@ -62,8 +117,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
