--- a/Python/Assignments/Assignment-2-Kyaw-Zin-Htet.ipynb
+++ b/Python/Assignments/Assignment-2-Kyaw-Zin-Htet.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bec0dc4a",
    "metadata": {},
    "outputs": [
@@ -46,13 +46,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "Here's your game board:\n",
       "\n",
+      "* T * * *\n",
       "* * * * *\n",
       "* * * * *\n",
-      "* * T * *\n",
       "* * * * *\n",
-      "* * * * *\n"
+      "* * * * *\n",
+      "Not here. Try again.\n",
+      "* T * * *\n",
+      "* * * * *\n",
+      "* * * * *\n",
+      "* * * * *\n",
+      "* X * * *\n",
+      "The final board (T = Treasure, X = Trap)\n"
      ]
     }
    ],
