Pair Coding - 1 : Done

--- a/Python/Projects/pair-coding-1.ipynb
+++ b/Python/Projects/pair-coding-1.ipynb
@@ -10,6 +10,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "991d9d80",
+   "metadata": {},
+   "source": [
+    "## Room 7\n",
+    "### Team Members\n",
+    "\n",
+    "#### 1. Kyaw Zin Htet (kyawzinhtet.ryan@gmail.com)\n",
+    "#### 2. Aye Yu Yu San (ayeyuyusan.yuri@gmail.com)\n",
+    "#### 3. Khin Pyae Sone Lin (khinlin.2003@gmail.com)\n",
+    "#### 4. Myo Myat Htun (myomyatskywalker@gmail.com)\n",
+    "#### 5. Mang Shang Sauying (mangshangsauying1437@gmail.com)\n",
+    "#### 6. Kyaw Phyo Aung (kyawphyoaung.me@gmail.com)\n",
+    "#### 7. Yu Myint Myat Aung (yumyintmyataung.ec@gmail.com)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5530710a",
    "metadata": {},
    "source": [
@@ -224,6 +241,136 @@
     "\n",
     "new_dict = {key: sample_dict[key] for key in keys_to_extract}\n",
     "print(new_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd089d93",
+   "metadata": {},
+   "source": [
+    "# Pair Coding (Advance Level)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f5468c1",
+   "metadata": {},
+   "source": [
+    "## 1) Function Exercise -- Missing Numbers in a Range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "ac9200f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing numbers in the range: [3, 4, 8, 9]\n",
+      "['None Missing']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_missing(start, end, nums):\n",
+    "  full_range = set(range(start, end + 1))\n",
+    "  missing_nums = []\n",
+    "  for num in full_range:\n",
+    "    if num not in nums:\n",
+    "      missing_nums.append(num)\n",
+    "  if not missing_nums:\n",
+    "    print([\"None Missing\"])\n",
+    "  else:\n",
+    "    print(\"Missing numbers in the range:\", missing_nums)\n",
+    "\n",
+    "find_missing(1, 10, [1,2,5,6,7,10])\n",
+    "find_missing(1, 10, [1,2,3,4,5,6,7,8,9,10])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2548a3fc",
+   "metadata": {},
+   "source": [
+    "## 2) Regular Expression Exercise -- Extract Phone Numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "c335fc15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['+90-532-123-4567', '(532) 987-6543', '5321230000']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "text = \"Call us at +90-532-123-4567 or (532) 987-6543. Old number 5321230000 is not used.\"\n",
+    "\n",
+    "pattern = r\"(\\+?\\d{1,3}[- ]?\\d{3}[- ]?\\d{3}[- ]?\\d{4}|\\(\\d{3}\\)\\s?\\d{3}[- ]?\\d{4}|\\d{10})\"\n",
+    "\n",
+    "matches = re.findall(pattern, text)\n",
+    "print(matches)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5e699f4",
+   "metadata": {},
+   "source": [
+    "## 3) File & Pandas Exercise -- Average Spending per User"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "9b2d292f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user_id,date,amount\n",
+      "u1,2025-09-10,20 \n",
+      "u1,2025-09-10,30 \n",
+      "u2,2025-09-10,40\n",
+      "u1,2025-09-11,10\n",
+      "u1 average daily spending = 30.0 u2 average daily spending = 40.0 Top spender: u2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# 1. Reading the file.\n",
+    "with open('transactions.csv', 'r') as file:\n",
+    "  print(file.read())\n",
+    "\n",
+    "#2. Calculates the average daily spending per user.\n",
+    "df = pd.read_csv('transactions.csv')\n",
+    "df.columns\n",
+    "\n",
+    "daily_spending = df.groupby(['user_id','date'])['amount'].sum().reset_index()\n",
+    "avg_spending = daily_spending.groupby('user_id')['amount'].mean()\n",
+    "\n",
+    "#3 Finds the user who spends the most on average per day.\n",
+    "max_spender = avg_spending.idxmax()\n",
+    "\n",
+    "for user_id, avg in avg_spending.items():\n",
+    "  print(f\"{user_id} average daily spending = {avg} \",end='')\n",
+    "\n",
+    "print(\"Top spender:\", max_spender)"
    ]
   }
  ],
